<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/menu_category_toasts_radio_title">
		<EditTextPreference
			android:key="CAR_SETTINGS__RADIO_TOAST_TEXT1_SIZE"
			android:title="@string/menu_radio_toast_text1_size_title"
			android:defaultValue="48"
			android:numeric="decimal"
			/>
		<EditTextPreference
			android:key="CAR_SETTINGS__RADIO_TOAST_TEXT2_SIZE"
			android:title="@string/menu_radio_toast_text2_size_title"
			android:defaultValue="25"
			android:numeric="decimal"
			/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/menu_category_toasts_music_title">
		<EditTextPreference
			android:key="CAR_SETTINGS__MUSIC_TOAST_TEXT1_SIZE"
			android:title="@string/menu_music_toast_text1_size_title"
			android:defaultValue="32"
			android:numeric="decimal"
			/>
		<EditTextPreference
			android:key="CAR_SETTINGS__MUSIC_TOAST_TEXT2_SIZE"
			android:title="@string/menu_music_toast_text2_size_title"
			android:defaultValue="22"
			android:numeric="decimal"
			/>
		<EditTextPreference
			android:key="CAR_SETTINGS__MUSIC_TOAST_PICTURE_WIDTH"
			android:title="@string/menu_music_toast_picture_width_title"
			android:defaultValue="128"
			android:numeric="decimal"
			/>
		<EditTextPreference
			android:key="CAR_SETTINGS__MUSIC_TOAST_PICTURE_HEIGHT"
			android:title="@string/menu_music_toast_picture_height_title"
			android:defaultValue="128"
			android:numeric="decimal"
			/>
	</PreferenceCategory>
</PreferenceScreen>
