<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/menu_category_floating_panel_icons">
		<CheckBoxPreference
			android:key="floating_panel_show_speed"
			android:title="@string/menu_floating_panel_icon_speed_title"
			android:defaultValue="true"
			android:icon="@drawable/speed"
			/>
		<CheckBoxPreference
			android:key="floating_panel_show_battery_level"
			android:title="@string/menu_floating_panel_icon_battery_level_title"
			android:defaultValue="true"
			android:icon="@drawable/car_battery_bad"
			/>
		<CheckBoxPreference
			android:key="floating_panel_show_coolant_temperature"
			android:title="@string/menu_floating_panel_icon_coolant_temp_title"
			android:defaultValue="true"
			android:icon="@drawable/coolant_temp_min"
			/>
		<CheckBoxPreference
			android:key="floating_panel_show_cvt_temperature"
			android:title="@string/menu_floating_panel_icon_cvt_temp_title"
			android:defaultValue="true"
			android:icon="@drawable/cvt_temp_min"
			/>
		<CheckBoxPreference
			android:key="floating_panel_show_fuel_level"
			android:title="@string/menu_floating_panel_icon_fuel_level_title"
			android:defaultValue="true"
			android:icon="@drawable/fuel_tank_full"
			/>
		<CheckBoxPreference
			android:key="floating_panel_show_fuel_consumption"
			android:title="@string/menu_floating_panel_icon_fuel_consumption_title"
			android:defaultValue="true"
			android:icon="@drawable/fuel_consump_min"
			/>
		<CheckBoxPreference
			android:key="floating_panel_show_distance"
			android:title="@string/menu_floating_panel_icon_distance_title"
			android:defaultValue="true"
			android:icon="@drawable/conversion_path_40px"
			/>
	</PreferenceCategory>
<!--	<PreferenceCategory android:title="@string/menu_category_toasts_music_title">-->
<!--		<EditTextPreference-->
<!--			android:key="CAR_SETTINGS__MUSIC_TOAST_TEXT1_SIZE"-->
<!--			android:title="@string/menu_music_toast_text1_size_title"-->
<!--			android:defaultValue="32"-->
<!--			android:numeric="decimal"-->
<!--			/>-->
<!--	</PreferenceCategory>-->
</PreferenceScreen>
