<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:id="@+id/layout_gps_speed"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivSpeed"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/speed"
            android:src="@drawable/speedo_1" />

        <TextView
            android:id="@+id/text_gps_speed_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/text_gps_speed_value"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:paddingStart="4dp"
            android:text="@string/unit_km_h"
            android:textSize="30sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_other_speed"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAverageSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="30dp"
            android:text="@string/text_average_speed"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvMaxSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_max_speed"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>